Corrects Radio Button Word Wrap Issue
In the case where the total length of words was more than the view width, the words would wrap to the next line in a manner that messed with the design. They would create a new line below the radio input itself. Wrapping the input and label element together in a div with display flex resolved this issue.

--- a/src/sass/layout/_homepage.scss
+++ b/src/sass/layout/_homepage.scss
@@ -107,6 +107,11 @@ label {
     text-align: center;
 }
 
+.radio-button-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
 .menu-content-wrap {
     background-color: $light-theme-background;
     padding: 1.5rem;
